@@ -135,81 +135,81 @@ remote-control:
 # and give that file special access control permissions.
 #
 # key:
-#	# The key name is sent to the other party, it must be the same
-#	name: "keyname"
-#	# algorithm hmac-md5, or hmac-sha1, or hmac-sha256 (if compiled in)
-#	algorithm: hmac-sha256
-#	# secret material, must be the same as the other party uses.
-#	# base64 encoded random number.
-#	# e.g. from dd if=/dev/random of=/dev/stdout count=1 bs=32 | base64
-#	secret: "K2tf3TRjvQkVCmJF3/Z9vA=="
+	# The key name is sent to the other party, it must be the same
+	#name: "keyname"
+	# algorithm hmac-md5, or hmac-sha1, or hmac-sha256 (if compiled in)
+	#algorithm: hmac-sha256
+	# secret material, must be the same as the other party uses.
+	# base64 encoded random number.
+	# e.g. from dd if=/dev/random of=/dev/stdout count=1 bs=32 | base64
+	#secret: "K2tf3TRjvQkVCmJF3/Z9vA=="
 
 
 # Patterns have zone configuration and they are shared by one or more zones.
 # 
 # pattern:
-#	# name by which the pattern is referred to
-#	name: "myzones"
-#	# the zonefile for the zones that use this pattern.
-#	# if relative then from the zonesdir (inside the chroot).
-#	# the name is processed: %s - zone name (as appears in zone:name).
-#	# %1 - first character of zone name, %2 second, %3 third.
-#	# %z - topleveldomain label of zone, %y, %x next labels in name.
-#	# if label or character does not exist you get a dot '.'.
-#	# for example "%s.zone" or "zones/%1/%2/%3/%s" or "secondary/%z/%s"
-#	zonefile: "%s.zone"
-#	
-#	# If no master and slave access control elements are provided,
-#	# this zone will not be served to/from other servers.
-#
-#	# A master zone needs notify: and provide-xfr: lists.  A slave
-#	# may also allow zone transfer (for debug or other secondaries).
-#	# notify these slaves when the master zone changes, address TSIG|NOKEY
-#	# IP can be ipv4 and ipv6, with @port for a nondefault port number.
-#	notify: 192.0.2.1 NOKEY
-#	# allow these IPs and TSIG to transfer zones, addr TSIG|NOKEY|BLOCKED
-#	# address range 192.0.2.0/24, 1.2.3.4&255.255.0.0, 3.0.2.20-3.0.2.40
-#	provide-xfr: 192.0.2.0/24 my_tsig_key_name
-#	# set the number of retries for notify.
-#	notify-retry: 5
-#
-#	# uncomment to provide AXFR to all the world
-#	# provide-xfr: 0.0.0.0/0 NOKEY
-#	# provide-xfr: ::0/0 NOKEY
-#
-#	# A slave zone needs allow-notify: and request-xfr: lists.
-#	allow-notify: 2001:db8::0/64 my_tsig_key_name
-#	# By default, a slave will request a zone transfer with IXFR/TCP.
-#	# If you want to make use of IXFR/UDP use: UDP addr tsigkey
-#	# for a master that only speaks AXFR (like NSD) use AXFR addr tsigkey
-#	request-xfr: 192.0.2.2 the_tsig_key_name
-#	# Attention: You cannot use UDP and AXFR together. AXFR is always over 
-#	# TCP. If you use UDP, we higly recommend you to deploy TSIG.
-#	# Allow AXFR fallback if the master does not support IXFR. Default
-#	# is yes.
-#	allow-axfr-fallback: yes
-#	# set local interface for sending zone transfer requests.
-#	# default is let the OS choose.
-#	outgoing-interface: 10.0.0.10
-#
-#	# if you give another pattern name here, at this point the settings
-#	# from that pattern are inserted into this one (as if it were a 
-#	# macro).  The statement can be given in between other statements,
-#	# because the order of access control elements can make a difference
-#	# (which master to request from first, which slave to notify first).
-#	include-pattern: "common-masters"
+	# name by which the pattern is referred to
+	#name: "myzones"
+	# the zonefile for the zones that use this pattern.
+	# if relative then from the zonesdir (inside the chroot).
+	# the name is processed: %s - zone name (as appears in zone:name).
+	# %1 - first character of zone name, %2 second, %3 third.
+	# %z - topleveldomain label of zone, %y, %x next labels in name.
+	# if label or character does not exist you get a dot '.'.
+	# for example "%s.zone" or "zones/%1/%2/%3/%s" or "secondary/%z/%s"
+	#zonefile: "%s.zone"
+	
+	# If no master and slave access control elements are provided,
+	# this zone will not be served to/from other servers.
+
+	# A master zone needs notify: and provide-xfr: lists.  A slave
+	# may also allow zone transfer (for debug or other secondaries).
+	# notify these slaves when the master zone changes, address TSIG|NOKEY
+	# IP can be ipv4 and ipv6, with @port for a nondefault port number.
+	#notify: 192.0.2.1 NOKEY
+	# allow these IPs and TSIG to transfer zones, addr TSIG|NOKEY|BLOCKED
+	# address range 192.0.2.0/24, 1.2.3.4&255.255.0.0, 3.0.2.20-3.0.2.40
+	#provide-xfr: 192.0.2.0/24 my_tsig_key_name
+	# set the number of retries for notify.
+	#notify-retry: 5
+
+	# uncomment to provide AXFR to all the world
+	# provide-xfr: 0.0.0.0/0 NOKEY
+	# provide-xfr: ::0/0 NOKEY
+
+	# A slave zone needs allow-notify: and request-xfr: lists.
+	#allow-notify: 2001:db8::0/64 my_tsig_key_name
+	# By default, a slave will request a zone transfer with IXFR/TCP.
+	# If you want to make use of IXFR/UDP use: UDP addr tsigkey
+	# for a master that only speaks AXFR (like NSD) use AXFR addr tsigkey
+	#request-xfr: 192.0.2.2 the_tsig_key_name
+	# Attention: You cannot use UDP and AXFR together. AXFR is always over 
+	# TCP. If you use UDP, we higly recommend you to deploy TSIG.
+	# Allow AXFR fallback if the master does not support IXFR. Default
+	# is yes.
+	#allow-axfr-fallback: yes
+	# set local interface for sending zone transfer requests.
+	# default is let the OS choose.
+	#outgoing-interface: 10.0.0.10
+
+	# if you give another pattern name here, at this point the settings
+	# from that pattern are inserted into this one (as if it were a 
+	# macro).  The statement can be given in between other statements,
+	# because the order of access control elements can make a difference
+	# (which master to request from first, which slave to notify first).
+	#include-pattern: "common-masters"
 
 
 # Fixed zone entries.  Here you can config zones that cannot be deleted.
 # Zones that are dynamically added and deleted are put in the zonelist file.
 #
 # zone:
-# 	name: "example.com"
-# 	# you can give a pattern here, all the settings from that pattern
-# 	# are then inserted at this point
-# 	include-pattern: "master"
-# 	# You can also specify (additional) options directly for this zone.
-# 	zonefile: "example.com.zone"
-# 	request-xfr: 192.0.2.1 example.com.key
+ 	# name: "example.com"
+ 	# you can give a pattern here, all the settings from that pattern
+ 	# are then inserted at this point
+ 	# include-pattern: "master"
+ 	# You can also specify (additional) options directly for this zone.
+ 	# zonefile: "example.com.zone"
+ 	# request-xfr: 192.0.2.1 example.com.key
 
 
